Request body adjustment
